package com.bencef.farm.plants;

public enum TraitResult {
    CONTINUE,
    ABORT
}
